@startuml er

entity "Users" as user {
    +user_id: Integer <<PK>> :"シーケンス"
    ---
    +email: String <<UK>> :"index"
    +username: String
}

entity "UserAuthentications" as user_auth {
    +id: Integer <<PK>> :"シーケンス"
    ---
    +user_id: Integer <<FK>>
    +provider: String
    +provider_user_id: String :"index"
}

entity "Clips" as clip {
    +clip_id: Integer <<PK>>
    ---
    +user_id: Integer <<FK>> :"index"
    +clip_name: String :"index"
    +clip_comment: String
    +clip_url: String
    +create_date: Date
    +update_date: Date
}

entity "Tags" as tag {
    +tag_id: Integer <<PK>>
    ---
    +tag_name: String <<UK>> :"index"
    +create_date: Date
    +update_date: Date
}

entity "ClipTags" as clip_tag {
    +clip_id: Integer <<FK>>
    +tag_id: Integer <<FK>>
}

user ||--o{ clip
user ||--o{ user_auth
clip ||--o{ clip_tag
tag ||--o{ clip_tag
@enduml